# irontology-mcp

./: .gitignore  Cargo.toml  EXECUTION_STATUS.md  PRD-1.md  README.md  irontology.just
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: demo-smoke.yml  wrkflw-ci-build.yml
crates/classifier/: Cargo.toml
crates/classifier/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/tests/: stdio.rs
crates/codegraph/: Cargo.toml
crates/codegraph/src/: graph.rs  lib.rs  symbol_node.rs
crates/codegraph/src/extractors/: mod.rs
crates/codegraph/src/parsers/: mod.rs  python.rs  rust.rs
crates/codegraph/tests/: idempotency.rs  rust_parser.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/dsl/: Cargo.toml  build.rs
crates/dsl/rules/: rust.tomllm
crates/dsl/src/: ast.rs  compiler.rs  grammar.lalrpop  lib.rs  matcher.rs
crates/dsl/tests/: compiler.rs  matcher.rs  prompt_compiler.rs
crates/forward-mcp/: Cargo.toml
crates/forward-mcp/src/: lib.rs
crates/forward-mcp/tests/: transport.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: chunking.rs  distillation.rs  dsl_matcher.rs  embedding.rs  lib.rs  pipeline.rs  watcher.rs
crates/indexer/tests/: dsl_rules.rs  pipeline_behaviour.rs  unchanged_skip.rs
crates/ingestion-pipeline/: Cargo.toml
crates/ingestion-pipeline/src/: assurance.rs  docling.rs  langextract.rs  lib.rs
crates/ingestion-pipeline/tests/: pipeline_tests.rs
crates/intake/: Cargo.toml
crates/intake/src/: lib.rs  paper.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/mcp-server/src/resources/: mod.rs  ontology.rs
crates/mcp-server/src/tools/: agent_forward_mcp.rs  agent_run.rs  ingest_document.rs  mod.rs  ontology_list_classes.rs  ontology_related_resources.rs  ontology_validate.rs  repo_index.rs  repo_read_symbol.rs  repo_search.rs  symbol_context.rs
crates/mcp-server/tests/: resource_registry.rs  startup_runtime.rs  tool_registry.rs  transport.rs
crates/naming/: Cargo.toml
crates/naming/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/provider-api/: Cargo.toml
crates/provider-api/src/: embed_anything.rs  lib.rs
crates/provider-local/: Cargo.toml
crates/provider-local/src/: lib.rs
crates/provider-local/tests/: lifecycle.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: lib.rs
crates/provider-test/: Cargo.toml
crates/provider-test/src/: lib.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: embed.rs  embed_anything.rs  fusion.rs  graph.rs  lexical.rs  lib.rs  ontology.rs  store_backend.rs  vector.rs
crates/retrieval/tests/: determinism.rs  modalities.rs  store_backed.rs
crates/semantic-runtime/: Cargo.toml
crates/semantic-runtime/src/: lib.rs
crates/storage-neumann/: Cargo.toml
crates/storage-neumann/src/: config.rs  lib.rs  neumann.rs  persistence.rs
crates/storage-neumann/tests/: contract.rs  persist.rs
crates/tomllm/: Cargo.toml
crates/tomllm/src/: lib.rs
examples/acme-corp/: README.md  phase2d.toml
examples/acme-corp/docs/: .promptexecution.toml
examples/acme-corp/docs/architecture/: standing-data.md
examples/acme-corp/docs/meeting-notes/: 2026-03-12-steering.docx
examples/acme-corp/docs/presentations/: q2-roadmap.pptx
examples/acme-corp/docs/processes/: order-to-cash.drawio
examples/acme-corp/executors/: python_curator.py
examples/acme-corp/repo/: .promptexecution.toml  Cargo.toml
examples/acme-corp/repo/src/: billing.rs
examples/acme-corp/rhai/: latent_dependencies.rhai
