[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/codegraph",
  "crates/indexer",
  "crates/dsl",
  "crates/retrieval",
  "crates/storage-neumann",
  "crates/mcp-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
