[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/codegraph",
  "crates/indexer",
  "crates/dsl",
  "crates/provider-api",
  "crates/provider-openai",
  "crates/provider-local",
  "crates/provider-test",
  "crates/tomllm",
  "crates/handlers",
  "crates/classifier",
  "crates/naming",
  "crates/intake",
  "crates/orchestrator",
  "crates/forward-mcp",
  "crates/retrieval",
  "crates/storage-neumann",
  "crates/mcp-server",
  "crates/cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"
