[package]
name = "classifier"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
handlers = { path = "../handlers" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
