[package]
name = "handlers"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
bytes = "1"
forward-mcp = { path = "../forward-mcp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
