[package]
name = "ingestion-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
domain = { path = "../domain" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
