[package]
name = "intake"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
classifier = { path = "../classifier" }
domain = { path = "../domain" }
handlers = { path = "../handlers" }
naming = { path = "../naming" }
serde.workspace = true
toml.workspace = true
blake3 = "1"

[dev-dependencies]
bytes = "1"
dsl = { path = "../dsl" }
serde_json.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
