[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "irontology-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
rmcp = { version = "0.8", features = ["server", "transport-io"] }
retrieval = { path = "../retrieval" }
storage-neumann = { path = "../storage-neumann" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
