[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "irontology-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8"
base64 = "0.22"
blake3 = "1"
domain = { path = "../domain" }
forward-mcp = { path = "../forward-mcp" }
ingestion-pipeline = { path = "../ingestion-pipeline" }
futures.workspace = true
indexer = { path = "../indexer" }
orchestrator = { path = "../orchestrator" }
provider-api = { path = "../provider-api" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "io-util"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
retrieval = { path = "../retrieval" }
storage-neumann = { path = "../storage-neumann" }

[dev-dependencies]
provider-test = { path = "../provider-test" }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-native-certs"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
