[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
provider-api = { path = "../provider-api" }
retrieval = { path = "../retrieval" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1", features = ["serde", "v4"] }
