[package]
name = "provider-api"
version.workspace = true
edition.workspace = true

[features]
default = []
embed-anything = ["b00t-embed"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
b00t-embed = { path = "../../../../b00t-embed", optional = true }
serde.workspace = true
serde_json.workspace = true
