[package]
name = "provider-local"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock_mistralrs_server"
path = "src/bin/mock_mistralrs_server.rs"
test = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.7"
provider-api = { path = "../provider-api" }
provider-openai = { path = "../provider-openai" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
