[package]
name = "retrieval"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-native-certs"] }
serde.workspace = true
serde_json.workspace = true
storage-neumann = { path = "../storage-neumann" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures.workspace = true
provider-api = { path = "../provider-api" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
