[package]
name = "retrieval"
version.workspace = true
edition.workspace = true

[features]
default = []
embed-anything = ["b00t-embed"]

[dependencies]
anyhow.workspace = true
b00t-embed = { path = "../../../../b00t-embed", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
storage-neumann = { path = "../storage-neumann" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures.workspace = true
provider-api = { path = "../provider-api" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
