[package]
name = "storage-neumann"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
rio_api = "0.8"
rio_turtle = "0.8"
serde.workspace = true
serde_json.workspace = true
sled = "0.34"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
