[package]
name = "storage-neumann"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
oxrdf = "0.3"
oxttl = "0.2"
serde.workspace = true
serde_json.workspace = true
sled = "0.34"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
